# Toolbox

./: .gitmodules  README.md  xml_to_csv.py
Conversion/: Odette  corpus_to_tei.py  intro  xml_to_csv.py
Conversion/NER/: 0-transformer-brat-a-bios.pl  1-convertir-conll2002-a-csv.py  README.md
Correction/: README.md
Correction/Stage-OBVIL-Nicolas/: script_pyEnchant.ipynb
Correction/Stage-OBVIL-Nicolas/Input/: 5781000.txt
Correction/Stage-OBVIL-Nicolas/Liste_correction/: liste.csv
Correction/jamspell/: JamSpellTest.ipynb  README.md  jamspell.ipynb  jamspell_xml_txt.ipynb
Correction/jamspell/csv/: 5419000.csv  (+4 more)
Correction/pyenchant/: script_pyEnchant.py
Correction/pyspellchecker/: README.rst  corr_OCR.ipynb  corr_OCR.py  corr_OCR_xml.ipynb
Entités nommées/: README.md  tei_ner.py
Entités nommées/inception-recommandeur/: README.md  config-recommandeurs.md  create-recommandeurs.md
Fouille/TF-IDF_BM25/: README.md  regex.txt  tfidf_bm25_bert.py
OCR/: README.md
OCR/Tesseract/: README.md
OCR/Transkribus/: README.md
OCR/eScriptorium/: README.md
OCR/kraken/: Kraken_LP.ipynb  README.md
OCR/partie 2/: README.md
Résumé automatique/: README.md  extract_from_xml.py
Scraping/: README.md  scrape_wikisource.py
Scrapping/: README.md  scrape_wikisource.py
WordEmbeddings/: README.md
converters/: corpus-to-tei.py  corpus_to_tei.ipynb  corpus_to_tei.py
inforetrievers/: extract_tei_sourcedesc.py
lib/todh/: README.rst  pyproject.toml
lib/todh/src/todh/: ner.py  tei_ner.py
lib/todh/src/todh/conversion/: __init__.py  corpus_to_tei.py  tei.py  utils.py
lib/todh/src/todh/ner/: tei.py
lib/todh/src/todh/scraping/: wikisource.py
lib/todh/tests/: test_todh.py
toolbox-site/: app.py  index.html  settings.cfg  toolbox_app.py
toolbox-site/css/: main.css
toolbox-site/static/: main.css
toolbox-site/templates/: conversion_xml.html  corpus-menu.html  corpus.html  creer_corpus.html  entites_nommees.html  fouille_de_texte.html  index.html  numeriser.html
toolbox-site/uploads/: carta_p67.xml
(+197 files in other folders)
